<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BBCCC"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginStart="52dp"
                android:id="@+id/input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <Spinner
                android:layout_marginStart="67dp"
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/sex">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_no" />
            <EditText
                android:layout_marginStart="20dp"
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />
            <EditText
                android:layout_marginStart="40dp"
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userAddress"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />

            <Spinner
                android:layout_marginStart="42dp"
                android:id="@+id/inputDivision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/division_list">
            </Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/white"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>