<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:background="#A7D2CB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"

            app:srcCompat="@drawable/upp" />

        <TextView
            android:id="@+id/search"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textviewborder"
            android:hint="@string/search_here"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:shadowColor="#F10A0A"
            android:textAlignment="center"
            android:textColorHint="#887A7A"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_search" />

        <TextView
            android:id="@+id/datepicker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textviewborder"
            android:drawablePadding="10dp"
            android:hint="@string/select_date"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#837C7C"
            android:textSize="20sp"
            app:drawableLeftCompat="@android:drawable/ic_menu_my_calendar"
            app:layout_constraintTop_toBottomOf="@+id/search" />

        <TextView
            android:id="@+id/guest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textviewborder"
            android:hint="@string/select_guests"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6C6262"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_person"
            app:layout_constraintTop_toBottomOf="@+id/datepicker" />

        <Button
            android:id="@+id/button33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#E53935"
            android:text="@string/search"
            app:layout_constraintTop_toBottomOf="@+id/guest" />
    </LinearLayout>

</FrameLayout>