<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#3949AB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="175dp"
            android:layout_height="44dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="64dp"
            android:background="#3949AB"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#FBF8F8"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_email"
            android:ems="10"
            android:hint="@string/registerEmail"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#FDFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#FCFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/confirm"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="310dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#FDFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="#F7FAF7F7"
            android:paddingStart="20dp"
            android:text="@string/register1"
            android:textColor="#040303"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button5"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="#F1F1F1"
            android:text="@string/already_have_an_account"
            android:textColor="#0C0C0C"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="#F6F5F5"
            android:textColorHint="#FAF6F6"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>